--- a/.github/workflows/cctv-m3u.yml
+++ b/.github/workflows/cctv-m3u.yml
@@ -2,51 +2,26 @@ name: Update CCTV IPTV Channels
 
 on:
   schedule:
-    # 每天凌晨2点运行 (UTC时间，北京时间是UTC+8，所以这里是18:00 UTC，即北京时间第二天2:00)
+    # 每天北京时间2点运行（UTC时间18:00）
     - cron: '0 18 * * *'
-  workflow_dispatch:  # 允许手动触发
+  workflow_dispatch:
 
 jobs:
   update-cctv:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-      with:
-        persist-credentials: false
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
 
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y wget gnupg
-
-    - name: Install Google Chrome
-      run: |
-        wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-        echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
-        sudo apt-get update
-        sudo apt-get install -y google-chrome-stable
-
-    - name: Check Chrome version
-      run: google-chrome-stable --version
-
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
         pip install selenium webdriver-manager requests beautifulsoup4
 
-    - name: Run script to generate M3U
-      run: fetch_cctv_channels
-    - name: Commit and push if changes
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add cctv_channels.m3u
-        git diff --staged --quiet || git commit -m "Auto-update CCTV channels - $(date)"
-        git push
+    - name: Run fetch_cctv_channels
+      run: python3 scripts/fetch_cctv_channels.py
