--- a/.github/workflows/Live TV Update.yml
+++ b/.github/workflows/Live TV Update.yml
@@ -18,7 +18,7 @@ jobs:
         playwright install chromium
 
     - name: 执行抓取
-      run: python generate_m3u.py
+      run: python scripts/generate_m3u.py
 
     - name: 提交结果
       run: |
