--- a/.github/workflows/Live TV Update.yml
+++ b/.github/workflows/Live TV Update.yml
@@ -1,29 +1,33 @@
-name: Live TV Update
+name: Generate M3U
 
 on:
+  push:
   schedule:
-    - cron: '0 */6 * * *'  # 每6小时运行
-  workflow_dispatch:
+    - cron: '0 19 * * *'  # 北京时间凌晨3点（UTC+8）对应 UTC时间19点
 
 jobs:
-  scrape:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
 
-    - name: 安装依赖
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+        cache: 'pip'
+
+    - name: Install dependencies
       run: |
-        sudo apt-get install -y chromium-browser
         pip install playwright lxml
         playwright install chromium
 
-    - name: 执行抓取
-      run: python scripts/generate_m3u.py
+    - name: Run script
+      working-directory: ./scripts
+      run: python generate_m3u.py
 
-    - name: 提交结果
-      run: |
-        git config --global user.name 'github-actions'
-        git config --global user.email 'actions@github.com'
-        git add -A
-        git commit -m "更新直播源 [$(date +'%Y-%m-%d %H:%M')]" || echo "无更新"
-        git push
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: m3u-files
+        path: scripts/output/
