--- a/.github/workflows/Generate-M3U.yml
+++ b/.github/workflows/Generate-M3U.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 15  # 设置整体超时，避免挂起
+    timeout-minutes: 15
 
     steps:
     - uses: actions/checkout@v4
@@ -23,21 +23,41 @@ jobs:
     - name: Install dependencies
       run: |
         pip install playwright lxml beautifulsoup4
-        playwright install --with-deps chromium  # 确保安装依赖
+        playwright install --with-deps chromium
+
+    - name: Create output directory
+      run: mkdir -p scripts/output  # 提前创建输出目录
 
     - name: Run script
       working-directory: ./scripts
       run: python generate_m3u.py
 
-    - name: Upload M3U artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: live-m3u
-        path: scripts/output/live.m3u
-        retention-days: 5  # 保留时间
+    - name: Check if M3U file was created
+      working-directory: ./scripts
+      run: |
+        if [ -f "output/live.m3u" ]; then
+          echo "File output/live.m3u exists. Proceeding to copy."
+          # 检查文件内容是否有效（至少包含EXTM3U）
+          if grep -q "#EXTM3U" output/live.m3u; then
+            echo "M3U file content appears valid."
+          else
+            echo "Warning: M3U file exists but may not contain valid content."
+          fi
+        else
+          echo "Error: output/live.m3u was not created! Listing directory contents:"
+          ls -la output/
+          exit 1
+        fi
 
     - name: Store M3U in repository output
       run: |
         mkdir -p ../output
         cp output/live.m3u ../output/
       working-directory: ./scripts
+
+    - name: Upload M3U artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: live-m3u
+        path: scripts/output/live.m3u
+        retention-days: 5
