--- a/.github/workflows/IPTV Crawler.yml
+++ b/.github/workflows/IPTV Crawler.yml
@@ -1,7 +1,7 @@
 name: IPTV Crawler
 
 on:
-  schedule:
+  //schedule:
     # 每天凌晨3点运行 (UTC时间)
     - cron: '0 3 * * *'
   workflow_dispatch:  # 允许手动触发
